fix collapse without included about module

--- a/src/style.scss
+++ b/src/style.scss
@@ -206,7 +206,6 @@ main > .container-fluid, main > .container {
 
 	.sidebar-bottom {
 		display: block;
-		height: 100px;
 		.nav {
 			height: 50px;
 			width: 100%;
